<resources>
    <string name="app_name">Droid Cafe</string>

    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">favorites</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="change_dessert">Change dessert</string>
    <string name="action_profile">Profile</string>
    <string name="action_notification">Notifications</string>
    <string name="name_label_text">Name</string>
    <string name="hintName">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="hintAdd">Enter Address</string>
    <string name="phone_label_text">Phone</string>
    <string name="hintphone">Enter Phone</string>
    <string name="note_label_text">Note</string>
    <string name="hintnote">Enter note</string>
    <string name="delivery_label_text">Choose a delievery method:</string>
    <string name="same">Same day messenger service</string>
    <string name="next">Next day ground delivery</string>
    <string name="pick">Pick up</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="chk_syr">Chocolate Syrup</string>
    <string name="sprink">Sprinkles</string>
    <string name="crushed">Crushed Nuts</string>
    <string name="cherries">Cherries</string>
    <string name="crumbles">Oreo Cookie Crumbles</string>
    <string name="toast">SHOW TOAST"</string>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
</resources>

